<?xml version="1.0"?>
<package>
    <name>p3dx_description</name>

    <version>0.2.0</version>
    <description>
        A Pioneer 3DX description for Gazebo.
        Tested on Ubuntu 16.04, ROS kinetic and Gazebo 7
    </description>

    <maintainer email="rafael.berkvens@uantwerpen.be">Rafael Berkvens</maintainer>
    <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

    <license>GPLv3</license>

    <!-- website where the code is hosted -->
    <url>https://github.com/RafBerkvens/ua_ros_p3dx</url>
    <url>https://github.com/socrob/ua_ros_p3dx</url>

    <!-- build dependencies -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- run dependencies -->
    <run_depend>xacro</run_depend>

</package>
